#footer-alignment-issue

--- a/src/components/Footer/resources/css/footer.css
+++ b/src/components/Footer/resources/css/footer.css
@@ -41,7 +41,7 @@
 }
 @media screen and (max-width: 500px) {
     .fc_sub_container{
-       padding: 40px;
+       padding: 40px !important;
     }
     .fc_services_section{
         margin: 5px;
